# Engine

./: .editorconfig  CMakeLists.txt  LICENSE  README.md
Common/: Direct3DUtils.h  MathHelper.cpp  MathHelper.h  MathTypes.h
Common/Mesh/: FStaticMesh.h  MeshBuilder.cpp  MeshBuilder.h
RHI/: RHIResource.h
RHI/DX12RHI/: DX12RHIResource.h
Shaders/: shader_mesh_dynamic_indexing_pixel.hlsl
src/: Assert.h  D3D12DynamicIndexing.cpp  D3D12DynamicIndexing.h  D3D12DynamicIndexing.vcxproj  D3D12DynamicIndexing.vcxproj.filters  D3D12QueueManager.cpp  D3D12QueueManger.h  DXSample.h  DXSampleHelper.h  DescriptorHeapManagement.cpp  DescriptorHeapManagement.h  FCamera.cpp  FCamera.h  FrameResource.cpp  FrameResource.h  MYEngine.sln  MYEngine.vcxproj  MYEngine.vcxproj.filters  Win32Application.cpp  shader_mesh_dynamic_indexing_pixel.hlsl  stdafx.h
